<resources>
    <string name="app_name">Activity3</string>
    <string name="var1">ini pesan</string>
    <string name="bsignin">SIGN-IN</string>
    <string name="tlogin">LOGIN</string>
    <string name="tData">Data anda</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="txEmail">Ini Hasil Email</string>
    <string name="txPassword">Ini Hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldafttar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="todo">TODO</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
</resources>